--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/DerekCL/NodeAuthApp/issues"
   },
-  "homepage": "https://github.com/DerekCL/NodeAuthApp#readme"
+  "homepage": "https://github.com/DerekCL/NodeAuthApp#readme",
+  "dependencies": {
+    "ajv": "^6.5.3",
+    "bluebird": "^3.5.1",
+    "compression": "^1.7.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-winston": "^3.0.0",
+    "helmet": "^3.13.0",
+    "pg-monitor": "^1.0.0",
+    "pg-promise": "^8.4.6",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "winston": "^3.0.0"
+  }
 }
