--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "ajv": "^6.5.3",
     "bluebird": "^3.5.1",
     "compression": "^1.7.3",
+    "connect-pg-simple": "^5.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
     "pg-monitor": "^1.0.0",
