--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-session": "^1.15.6",
     "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg-monitor": "^1.0.0",
     "pg-promise": "^8.4.6",
     "request": "^2.88.0",
