--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bluebird": "^3.5.1",
     "compression": "^1.7.3",
     "connect-pg-simple": "^5.0.0",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
