--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.15.6",
     "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
+    "moment-timezone": "^0.5.21",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "pg-monitor": "^1.0.0",
