--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "ajv": "^6.5.3",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "connect-pg-simple": "^5.0.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
@@ -32,9 +34,11 @@
     "express-session": "^1.15.6",
     "express-winston": "^3.0.0",
     "helmet": "^3.13.0",
+    "jsonwebtoken": "^8.3.0",
     "moment-timezone": "^0.5.21",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-google-token": "^0.1.2",
     "pg-monitor": "^1.0.0",
     "pg-promise": "^8.4.6",
     "request": "^2.88.0",
