--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "set NODE_ENV=development && nodemon index.js",
     "start:prod": "node index.js",
     "report": "nyc report --reporter=text",
-    "test": "nyc mocha"
+    "test": "nyc mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -57,5 +57,14 @@
     "prettier": "^1.14.2",
     "typescript": "^3.0.3",
     "typescript-eslint-parser": "^18.0.0"
+  },
+  "nyc": {
+    "extension": [
+      ".js"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ]
   }
 }
