--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-node": "^7.0.1",
@@ -55,6 +56,9 @@
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
     "prettier": "^1.14.2",
+    "sinon": "^6.2.0",
+    "sinon-chai": "^3.2.0",
+    "sinon-express-mock": "^2.0.5",
     "typescript": "^3.0.3",
     "typescript-eslint-parser": "^18.0.0"
   },
